<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="324dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:text="@string/Todo_risuto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="120dp"
        android:layout_height="21dp"
        android:text="@string/todo_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="120dp"
        android:layout_height="21dp"
        android:text="@string/todo_text2"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextText1"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText1" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@+id/editTextText1"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@+id/editTextText2"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />

    <Button
        android:id="@+id/button"
        android:layout_width="87dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/todo_listok2"
        app:layout_constraintStart_toEndOf="@+id/editTextText4"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="87dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/todo_listok"
        app:layout_constraintStart_toEndOf="@+id/editTextText3"
        app:layout_constraintTop_toBottomOf="@+id/empty" />

    <Button
        android:id="@+id/button3"
        android:layout_width="87dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/todo_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/empty" />

    <Button
        android:id="@+id/button4"
        android:layout_width="87dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/todo_delete2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <TextView
        android:id="@+id/empty"
        android:layout_width="120dp"
        android:layout_height="21dp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />
</androidx.constraintlayout.widget.ConstraintLayout>